pkl-core/src/test/files/LanguageSnippetTests/input/errors/undefinedProperty1.pkl
class Person {
  name: String
}

res1: Person
